--- a/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Vehicle/IndexVehicle.cshtml
+++ b/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Vehicle/IndexVehicle.cshtml
@@ -17,6 +17,7 @@
             <th>Manufacture Date</th>
             <th>Version</th>
             <th>Image</th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
@@ -34,6 +35,9 @@
                     {
                         <img src="@vehicle.Image" alt="Vehicle Image" style="max-width:100px;max-height:100px;" />
                     }
+                </td>
+                <td>
+                    <a asp-controller="Vehicle" asp-action="VehicleDetail" asp-route-vehicleId="@vehicle.VehicleId" class="btn btn-primary">View Detail</a>
                 </td>
             </tr>
         }
