--- a/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Admin/GetUserById.cshtml
+++ b/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Admin/GetUserById.cshtml
@@ -17,6 +17,12 @@
 
                 <dt class="col-sm-3">Role</dt>
                 <dd class="col-sm-9">@Model.Role</dd>
+
+                <dt class="col-sm-3">Dealer Type</dt>
+                <dd class="col-sm-9">@(Model.Dealer?.DealerType?.TypeName ?? "N/A")</dd>
+
+                <dt class="col-sm-3">Dealer Address</dt>
+                <dd class="col-sm-9">@(Model.Dealer?.Address ?? "N/A")</dd>
             </dl>
         </div>
     </div>
