--- a/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Account/Register.cshtml
+++ b/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Account/Register.cshtml
@@ -1,3 +1,5 @@
+@model BusinessObject.BusinessObject.UserModels.Request.RegisterRequest
+
 @{
     ViewData["Title"] = "Register";
 }
@@ -24,12 +26,16 @@
                     }
                     <form method="post" asp-action="Register" asp-controller="Account">
                         <div class="form-group mb-3">
-                            <label for="username">Username:</label>
-                            <input type="text" class="form-control" id="username" name="Username" required>
+                            <label asp-for="Username">Username:</label>
+                            <input asp-for="Username" class="form-control" required>
                         </div>
                         <div class="form-group mb-3">
-                            <label for="password">Password:</label>
-                            <input type="password" class="form-control" id="password" name="password" required>
+                            <label asp-for="Password">Password:</label>
+                            <input asp-for="Password" type="password" class="form-control" required>
+                        </div>
+                        <div class="form-group mb-3">
+                            <label asp-for="ConfirmPassword">Confirm Password:</label>
+                            <input asp-for="ConfirmPassword" type="password" class="form-control" required>
                         </div>
                         <div class="text-center">
                             <button type="submit" class="btn btn-primary">Register</button>
