--- a/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Shared/_Layout.cshtml
+++ b/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Shared/_Layout.cshtml
@@ -62,7 +62,7 @@
                 <ul>
                     <li><a  asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Services</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Services">Services</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="PortfolioDetail">Portfolio</a></li>
                     <li><a href="#team">Team</a></li>
                     <li><a href="#contact">Contact</a></li>
