--- a/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Home/Index.cshtml
+++ b/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
                         <h1 data-aos="fade-up" data-aos-delay="200">Transform Your Business Vision Into Reality</h1>
                         <p data-aos="fade-up" data-aos-delay="300">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
                         <div class="hero-cta" data-aos="fade-up" data-aos-delay="400">
-                            <a href="#about" class="btn-primary">Get Started Today</a>
+                            <a  asp-area="" asp-controller="Admin" asp-action="Dashboard" class="btn-primary">Get Started Today</a>
 
                         </div>
                         <div class="hero-stats" data-aos="fade-up" data-aos-delay="500">
