--- a/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Shared/Admin_Layout.cshtml
+++ b/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Shared/Admin_Layout.cshtml
@@ -53,7 +53,7 @@
                 <div class="section-title">Navigation</div>
                 <ul class="nav-menu">
                     <li class="nav-item">
-                        <a href="#" class="nav-link active">
+                        <a  class="nav-link active">
                             <div class="nav-content">
                                 <i class="bi bi-speedometer2 nav-icon"></i>
                                 Dashboard
