--- a/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Shared/Admin_Layout.cshtml
+++ b/PRN222MVC/ElectricVehicleDealerManagermentSystem/Views/Shared/Admin_Layout.cshtml
@@ -179,6 +179,9 @@
                     <button class="header-btn">
                         <i class="bi bi-person-circle" style="font-size: 18px;"></i>
                     </button>
+                    <a href="@Url.Action("Logout", "Account")" class="header-btn" style="text-decoration: none; color: inherit; margin-left: 10px;">
+                        <i class="bi bi-box-arrow-right" style="font-size: 16px;" title="Logout"></i>
+                    </a>
                 </div>
             </div>
 
